--- a/Verteilte Systeme - Lab2 - RMI/src/user.properties
+++ b/Verteilte Systeme - Lab2 - RMI/src/user.properties
@@ -7,3 +7,5 @@ lisi = 19a61611ae88dd9d112d49a9ca420848
 # password for Roy, MD5 of dslab249
 roy = 9db2ca06d8f9dd2a21c0f0aeb7f10288
 
+# password for AuctionServer, MD5 of auctionServer123
+auctionServer = 0f05a5619b1bb25af22b286d40fd4374
