--- a/Verteilte Systeme - Lab2 - RMI/src/loadtest.properties
+++ b/Verteilte Systeme - Lab2 - RMI/src/loadtest.properties
@@ -1,7 +1,7 @@
 # TODO: adjust these values
-clients = 100
+clients = 1
 auctionsPerMin = 1
-auctionDuration = 2*60
+auctionDuration = 60
 updateIntervalSec: 20
 bidsPerMin = 2
 
